2005-05-13  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-ssl.c: (_lm_ssl_read):
	- Try to fix LM-3 for real this time.

2005-05-08  Mikael Hallendal  <micke@imendio.com>

	* Release 0.90

	* NEWS:
	* configure.in:
	- Updated for 0.90

2005-05-05  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: 
	(_lm_connection_succeeded):
	- Don't unref io_channel here as well, already done in do_close.
	- Fixes LM-5, reported by Daniel Lavalliere.
	(connection_do_close):
	- Set fd to -1 to be sure it's not used again.

2005-05-05  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-ssl.c: (_lm_ssl_read):
	- Don't accidently return a negative bytes_read.
	- Fixes LM-3, reported by Daniel Lavalliere.

2005-05-05  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free):
	- Unref LmSSL when freeing connection. Reported by Daniel Lavalliere.
	- Fixes LM-4.

2005-04-24  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free):
	- Free the incoming message queue, reported by Daniel Lavalliere.

2005-04-24  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (_lm_connection_succeeded),
	(_lm_connection_failed_with_error), (connection_connect_cb),
	(connection_do_connect), (connection_do_close):
	- Disconnect from the connect io-watch when connect is done.
	- Based on a patch from Daniel Lavalliere.

2005-04-18  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free):
	- Check if connection is opening as well and close it if it is.
	- Fix suggested by Daniel Lavalliere.

2005-03-31  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am:
	* CONTRIBUTORS: 
	* loudmouth/lm-connection.c:
	* loudmouth/lm-ssl.c:
	- More release work. 
	- Adding CONTRIBUTORS file.

2005-03-31  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am:
	* configure.in:
	- Removed the mono directory from the release tarball, never finished